--- a/css/main.css
+++ b/css/main.css
@@ -106,19 +106,53 @@ body._lock {
 }
 
 .header__content {
-  max-width: 1044px;
-  padding: 0 6px;
+  max-width: 1052px;
+  padding: 0 10px;
+  margin: 0 auto;
 }
-
-.menu__list {
+.header__menu {
   display: flex;
   justify-content: flex-end;
   height: 82px;
   align-items: center;
   padding: 10px 0;
 }
+@media (max-width: 767.98px) {
+  .header__menu {
+    height: 50px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .menu__body {
+    transition: transform 0,6s ease 0s;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: -100%;
+    left: 0;
+    overflow: auto;
+    padding: 70px 10px 30px 10px;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+  .menu__body.active {
+    top: 0%;
+    transition: all 0.5s ease 0s;
+  }
+}
 .menu__list li {
-  margin: 0 0 0 33px;
+  margin: 0 0 30px 0;
+}
+.menu__list li:last-child {
+  margin: 0 0 0 0;
+}
+@media (min-width: 767.98px) {
+  .menu__list {
+    display: flex;
+  }
+  .menu__list li {
+    margin: 0 33px 0 0;
+  }
 }
 .menu__link {
   font-size: 20px;
@@ -131,6 +165,13 @@ body._lock {
     color: #ff6464;
   }
 }
+@media (max-width: 767.98px) {
+  .menu__link {
+    font-size: 40px;
+    display: block;
+    text-align: center;
+  }
+}
 
 .icon-menu {
   display: none;
@@ -138,9 +179,7 @@ body._lock {
 @media (max-width: 767.98px) {
   .icon-menu {
     display: block;
-    position: absolute;
-    top: 18px;
-    right: 10px;
+    position: relative;
     width: 30px;
     height: 18px;
     cursor: pointer;
@@ -162,14 +201,15 @@ body._lock {
     top: auto;
     bottom: 0;
   }
-  .icon-menu._active span {
+  .icon-menu.active span {
     transform: scale(0);
+    transition: all 0.4s ease 0s;
   }
-  .icon-menu._active span:first-child {
+  .icon-menu.active span:first-child {
     transform: rotate(-45deg);
     top: calc(50% - 1px);
   }
-  .icon-menu._active span:first-child {
+  .icon-menu.active span:last-child {
     transform: rotate(45deg);
     bottom: calc(50% - 1px);
   }
