--- a/scss/main.scss
+++ b/scss/main.scss
@@ -57,29 +57,51 @@ body {
 .header {
 
     &__content {
-        max-width: 1044px;
-        padding: 0 6px;
+        max-width: 1052px;
+        padding: 0 10px;
+        margin: 0 auto;
     }
     &__menu {
-
-    }
-}
-.menu {
-
-    &__icon {
-
-    }
-    &__body {
-
-    }
-    &__list {
         display: flex;
         justify-content: flex-end;
         height: 82px;
         align-items: center;
         padding: 10px 0;
+        @media (max-width: $md3+px) {
+            height: 50px;
+        }
+    }
+}
+.menu {
+    &__body {
+        @media (max-width: $md3+px) {
+            transition: transform 0,6s ease 0s;
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            top: -100%;
+            left: 0;
+            overflow: auto;
+            padding: 70px 10px 30px 10px;
+            background-color: rgba(255, 255, 255, 0.8);
+            &.active {
+                top: 0%;
+                transition: all 0.5s ease 0s;
+            }
+        }
+    }
+    &__list {
         li {
-            margin: 0 0 0 33px;
+            margin: 0 0 30px 0;
+                &:last-child {
+                    margin: 0 0 0 0;
+                }
+        }
+        @media (min-width: $md3+px) {
+            display: flex;
+            li {
+                margin: 0 33px 0 0;
+            }
         }
     }   
     &__link {
@@ -92,15 +114,18 @@ body {
                 color: #ff6464;
             }
         }
+        @media (max-width: $md3+px) {
+            font-size: 40px;
+            display: block;
+            text-align: center;
+        }
     }
 }
 .icon-menu {
     display: none;
     @media (max-width: $md3+px) {
         display: block;
-        position: absolute;
-        top: 18px;
-        right: 10px;
+        position: relative;
         width: 30px;
         height: 18px;
         cursor: pointer;
@@ -121,17 +146,18 @@ body {
                 bottom: 0;
             }
         }
-        &._active {
+        &.active {
             span {
-                transform: scale(0);
                 &:first-child {
                     transform: rotate(-45deg);
                     top: calc(50% - 1px);
                 }
-                &:first-child {
+                &:last-child {
                     transform: rotate(45deg);
                     bottom: calc(50% - 1px);
                 }
+                transform: scale(0);
+                transition: all 0.4s ease 0s;
             }
         }
     }
