--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Heebo:regular,500,700,900&display=swap);
-@import url(https://fonts.googleapis.com/css?family=Heebo:regular,500,700,900&display=swap);
 * {
   padding: 0;
   margin: 0;
@@ -9,6 +8,7 @@
 *,
 *:before,
 *:after {
+  -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
@@ -88,148 +88,10 @@ h6 {
   font-weight: inherit;
 }
 
-.header__content {
-  max-width: 1052px;
-  padding: 0 10px;
-  margin: 0 auto;
-}
-
-.header__menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  height: 82px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 10px 0;
-}
-
-@media (max-width: 767.98px) {
-  .header__menu {
-    height: 50px;
-  }
-}
-
-@media (max-width: 767.98px) {
-  .menu__body {
-    -webkit-transition: 6s ease 0s, -webkit-transform 0;
-    transition: 6s ease 0s, -webkit-transform 0;
-    transition: transform 0, 6s ease 0s;
-    transition: transform 0, 6s ease 0s, -webkit-transform 0;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: -100%;
-    left: 0;
-    overflow: auto;
-    padding: 70px 10px 30px 10px;
-    background-color: rgba(255, 255, 255, 0.8);
-  }
-  .menu__body.active {
-    top: 0%;
-    -webkit-transition: all 0.5s ease 0s;
-    transition: all 0.5s ease 0s;
-  }
-}
-
-.menu__list li {
-  margin: 0 0 30px 0;
-}
-
-.menu__list li:last-child {
-  margin: 0 0 0 0;
-}
-
-@media (min-width: 767.98px) {
-  .menu__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  .menu__list li {
-    margin: 0 33px 0 0;
-  }
-}
-
-.menu__link {
-  font-size: 20px;
-  font-weight: 500;
-  color: #000;
-  -webkit-transition: color 0.3s ease 0s;
-  transition: color 0.3s ease 0s;
-}
-
-@media (min-width: 991.98px) {
-  .menu__link:hover {
-    color: #ff6464;
-  }
-}
-
-@media (max-width: 767.98px) {
-  .menu__link {
-    font-size: 40px;
-    display: block;
-    text-align: center;
-  }
-}
-
-.icon-menu {
-  display: none;
-}
-
-@media (max-width: 767.98px) {
-  .icon-menu {
-    display: block;
-    position: relative;
-    width: 30px;
-    height: 18px;
-    cursor: pointer;
-    z-index: 5;
-  }
-  .icon-menu span {
-    -webkit-transition: all 0.3s ease 0s;
-    transition: all 0.3s ease 0s;
-    top: calc(50% - 1px);
-    left: 0;
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background-color: #000;
-  }
-  .icon-menu span:first-child {
-    top: 0;
-  }
-  .icon-menu span:last-child {
-    top: auto;
-    bottom: 0;
-  }
-  .icon-menu.active span {
-    -webkit-transform: scale(0);
-            transform: scale(0);
-    -webkit-transition: all 0.4s ease 0s;
-    transition: all 0.4s ease 0s;
-  }
-  .icon-menu.active span:first-child {
-    -webkit-transform: rotate(-45deg);
-            transform: rotate(-45deg);
-    top: calc(50% - 1px);
-  }
-  .icon-menu.active span:last-child {
-    -webkit-transform: rotate(45deg);
-            transform: rotate(45deg);
-    bottom: calc(50% - 1px);
-  }
-}
-
 body {
   color: black;
   font-size: 14px;
 }
-
 body._lock {
   overflow: hidden;
 }
@@ -238,13 +100,8 @@ body._lock {
   width: 100%;
   min-height: 100%;
   overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   font-family: "Heebo";
 }
 
@@ -252,13 +109,11 @@ body._lock {
   max-width: 856px;
   margin: 0 auto;
 }
-
 @media (max-width: 868px) {
   .container {
     min-width: 750px;
   }
 }
-
 @media (max-width: 991.98px) {
   .container {
     min-width: none;
