--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ h6 {
 }
 
 body {
-  color: black;
+  color: #21243D;
   font-size: 14px;
 }
 body._lock {
@@ -105,18 +105,252 @@ body._lock {
   font-family: "Heebo";
 }
 
-.container {
+.page {
+  padding: 90px 0 0 0;
+  flex: 1 1 auto;
+}
+@media (max-width: 868px) {
+  .page {
+    padding: 30px 15px 0 15px;
+  }
+}
+@media (max-width: 767.98px) {
+  .page {
+    padding: 20px 0 0 0;
+  }
+}
+
+._container {
   max-width: 856px;
   margin: 0 auto;
 }
-@media (max-width: 868px) {
-  .container {
-    min-width: 750px;
+
+.title-posts {
+  font-size: 22px;
+}
+@media (max-width: 767.98px) {
+  .title-posts {
+    text-align: center;
+    font-size: 18px;
   }
 }
-@media (max-width: 991.98px) {
-  .container {
-    min-width: none;
-    padding: 0 10px;
+
+.hi {
+  padding: 40px 0 70px 0;
+}
+@media (max-width: 868px) {
+  .hi {
+    padding: 0 0 70px 0;
   }
+}
+@media (max-width: 767.98px) {
+  .hi {
+    padding: 0 0 60px 0;
+  }
+}
+.hi__container {
+  display: flex;
+  width: 100%;
+}
+@media (max-width: 767.98px) {
+  .hi__container {
+    text-align: center;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+}
+.hi__content {
+  flex: 1 1 auto;
+  padding: 18px 110px 0 0;
+  align-items: flex-start;
+}
+@media (max-width: 868px) {
+  .hi__content {
+    padding: 18px 50px 0 0;
+  }
+}
+@media (max-width: 767.98px) {
+  .hi__content {
+    padding: 0px 0px 0 0;
+  }
+}
+.hi__title {
+  margin: 0 0 25px 0;
+}
+@media (max-width: 767.98px) {
+  .hi__title {
+    margin: 0px 0 20px 0;
+    padding: 0 15px;
+  }
+}
+.hi__text {
+  margin: 0 0 35px 0;
+}
+@media (max-width: 767.98px) {
+  .hi__text {
+    margin: 0 0 25px 0;
+    padding: 0 15px;
+  }
+}
+.hi__btn {
+  margin: 33px 0 0 0;
+}
+@media (max-width: 767.98px) {
+  .hi__btn {
+    margin: 0 0 0 0;
+  }
+}
+.hi__ava {
+  flex: 0 0 243px;
+  width: 243px;
+  height: 243px;
+  border-radius: 50%;
+  overflow: hidden;
+  justify-content: flex-end;
+  box-shadow: -5px 13px 0 0 #edf7fa;
+}
+.hi__ava img {
+  max-width: 100%;
+}
+@media (max-width: 767.98px) {
+  .hi__ava {
+    flex: 0 0 170px;
+    width: 170px;
+    height: 170px;
+    margin: 0 0 40px 0;
+  }
+}
+
+.title {
+  font-size: 44px;
+  font-weight: 500;
+  color: #21243D;
+  line-height: 136.3636363636%;
+}
+@media (max-width: 767.98px) {
+  .title {
+    font-size: 32px;
+  }
+}
+
+.text {
+  font-size: 16px;
+  line-height: 24px;
+  color: #21243D;
+  font-weight: 400;
+}
+
+.btn {
+  background: #ff6464;
+  border-radius: 2px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 145%;
+  color: white;
+  display: inline-flex;
+  align-items: center;
+  height: 47px;
+  justify-content: center;
+  text-align: center;
+  padding: 0 20px;
+  transition: background-color 0.3s ease 0s;
+}
+@media (min-width: 992px) {
+  .btn:hover {
+    background-color: #bb4949;
+  }
+  .btn._fw {
+    width: 100%;
+  }
+}
+
+.recent-posts {
+  background: #EDF7FA;
+  padding: 25px 15px 13px 15px;
+}
+@media (max-width: 767.98px) {
+  .recent-posts {
+    padding: 25px 15px 23px 15px;
+  }
+}
+.recent-posts__header {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 0 22px 0;
+}
+.recent-posts__title {
+  font-size: 22px;
+  padding: 0 20px 0 0;
+}
+.recent-posts__view-all {
+  font-size: 16px;
+  line-height: 24px;
+  color: #00A8CC;
+  flex: 0 0 auto;
+}
+.recent-posts__items {
+  margin: 0 -10px;
+}
+@media (min-width: 767.98px) {
+  .recent-posts__items {
+    display: flex;
+  }
+}
+.recent-posts__column {
+  flex: 0 1 50%;
+  padding: 0 10px;
+  margin: 0 0 17px 0;
+}
+
+.recent-post {
+  height: 100%;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 4px 10px rgba(187, 225, 250, 0.25);
+  padding: 20px;
+}
+@media (max-width: 767.98px) {
+  .recent-post {
+    padding: 15px;
+  }
+}
+.recent-post__title {
+  font-weight: 700;
+  font-size: 26px;
+  display: inline-block;
+  color: #21243D;
+  line-height: 146.1538461538%;
+  transition: color 0.3s ease 0s;
+  margin: 0 0 17px 0;
+}
+@media (min-width: 991.98px) {
+  .recent-post__title:hover {
+    color: #ff6464;
+  }
+}
+@media (max-width: 767.98px) {
+  .recent-post__title {
+    font-size: 22px;
+    margin: 0 0 10px 0;
+  }
+}
+.recent-post__info {
+  margin: 0 0 15px 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 144.4444444444%;
+}
+.recent-post__info span {
+  margin: 0 25px;
+}
+@media (max-width: 767.98px) {
+  .recent-post__info {
+    font-size: 16px;
+    margin: 0 0 10px 0;
+  }
+}
+.recent-post__text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
 }
