--- a/scss/main.scss
+++ b/scss/main.scss
@@ -143,6 +143,18 @@ body {
     }
 }
 
+._ibg {
+    position: relative;
+    img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0px;
+        left: 0px;
+        object-fit: cover;
+    }
+}
+
 .hi {
     padding: 40px 0 70px 0;
     @media (max-width: $md1+px) {
@@ -348,3 +360,134 @@ body {
     }
 }
 
+
+.featured-works {
+    margin: 30px 0 80px 0;
+    @media (max-width: $md3+px) {
+        margin: 10px 0 0 0;
+    }
+    &__container {
+    }
+
+    &__title {
+        font-weight: 400;
+        font-size: 22px;
+        line-height: 60 / 22 * 100%;
+        margin: 0 0 20px 0;
+        @media (max-width: $md3+px) {
+            margin: 0px 0 0 0;
+        }
+    }
+}
+
+.title-posts {
+}
+.works {
+    @media (max-width: $md3+px) {
+        padding: 10px 15px 23px 15px;
+        display: flex;
+        overflow: auto;
+    }
+    &__item {
+        border-bottom: 1px solid #e0e0e0;
+        padding: 0 0 30px 0;
+        margin: 0 0 30px 0;
+        &:last-child {
+            margin-bottom: 0;
+        }
+        @media (min-width: $md3+px) {
+            display: flex;
+            align-items: flex-start;
+        }
+        @media (max-width: $md3+px) {
+            flex: 0 0 90%;
+            margin: 0 15px 50px 0;
+        }
+    }
+
+    &__image {
+        border-radius: 6px;
+        flex: 0 0 246px;
+        min-height: 180px;
+        display: block;
+        overflow: hidden;
+        @media (max-width: $md3+px) {
+            padding: 0 0 60% 0;
+            margin: 0 0 17px 0;
+        }
+    }
+
+    &__body {
+        flex: 1 1 auto;
+        @media (min-width: $md3+px) {
+            margin: 0 0 0 20px;
+        }
+    }
+
+    &__title {
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 44 / 30 * 100%;
+        margin: 0 0 15px 0;
+        @media (max-width: $md3+px) {
+            font-size: 24px;
+        }
+    }
+
+    &__info {
+        display: flex;
+        align-items: center;
+        margin: 0 0 15px 0;
+    }
+
+    &__year {
+        font-weight: 900;
+        font-size: 18px;
+        color: #FFFFFF;
+        background: #142850;
+        border-radius: 16px;
+        width: 62px;
+        height: 25px;
+        text-align: center;
+        padding: 0 10px;
+        align-items: center;
+        display: inline-flex;
+    }
+
+    &__category {
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 29 / 20 * 100%;
+        color: #8695A4;
+        margin: 0 0 0 25px;
+    }
+}
+.year {
+}
+.category {
+}
+
+
+.footer {
+    margin: 0 0 60px 0;
+    padding: 10px 15px 23px 15px;
+    text-align: center;
+
+    &__copy {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 21 / 14 * 100%;
+        margin: 26px 0 0 0;
+    }
+}
+
+.social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &__item {
+        font-size: 30px;
+        margin: 0 17px;
+        color: inherit;
+    }
+}
