--- a/scss/header.scss
+++ b/scss/header.scss
@@ -76,6 +76,9 @@ $md4: 479.98;
         font-weight: 500;
         color: #000;
         transition: color 0.3s ease 0s;
+        &._active {
+            color: #ff6464;
+        }
 
         @media (min-width: $md2+px) {
             &:hover {
