--- a/scss/main.scss
+++ b/scss/main.scss
@@ -155,6 +155,7 @@ body {
     }
 }
 
+
 .hi {
     padding: 40px 0 70px 0;
     @media (max-width: $md1+px) {
@@ -491,3 +492,70 @@ body {
         color: inherit;
     }
 }
+
+
+.blog {
+    padding: 0 15px 50px 15px;
+    @media (max-width: $md3+px) {
+        padding-bottom: 30px;
+    }
+    &__title {
+        margin: 0 0 50px 0;
+        margin-bottom: 15px;
+        padding-bottom: 15px;
+    }
+
+    &__items {
+    }
+
+    &__item {
+        border-bottom: 1px solid #E0E0E0;
+        margin-bottom: 25px;
+        padding-bottom: 25px;
+        @media (max-width: $md3+px) {
+            margin-bottom: 25px;
+            padding-bottom: 25px;
+        }
+    }
+
+    &__info {
+        display: flex;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 29 / 20 * 100%;
+        margin: 0 0 10px 0;
+        span {
+            margin: 0 15px;
+        }
+        @media (max-width: $md3+px) {
+            font-size: 16px;
+        }
+    }
+    &__title2 {
+        font-weight: 500;
+        font-size: 30px;
+        line-height: 44 / 30 * 100%;
+        color: #21243D;
+        transition: color 0.3s ease 0s;
+        @media (min-width: $md2+px) {
+            &:hover {
+                color: #ff6464;
+            }
+        }
+        @media (max-width: $md3+px) {
+            font-size: 26px;
+        }
+    }
+
+    &__category {
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 29 / 20 * 100%;
+        color: #8695A4;
+    }
+
+    &__text {
+    }
+}
+
+
