Закончил верстку) Ураааааgit add .git add .

--- a/scss/header.scss
+++ b/scss/header.scss
@@ -49,6 +49,7 @@ $md4: 479.98;
             &.active {
                 top: 0%;
                 transition: all 0.5s ease 0s;
+                position: fixed;
             }
         }
     }
