--- a/css/main.css
+++ b/css/main.css
@@ -109,14 +109,17 @@ body {
       font-size: 18px; } }
 
 ._ibg {
-  position: relative; }
+  overflow: hidden; }
   ._ibg img {
-    position: absolute;
     width: 100%;
     height: 100%;
     top: 0px;
     left: 0px;
     object-fit: cover; }
+
+a.works__image._ibg {
+  margin: 0 0;
+  padding: 0 0 17px 0; }
 
 .hi {
   padding: 40px 0 70px 0; }
@@ -187,7 +190,7 @@ body {
     .title {
       font-size: 32px; } }
 
-.text {
+.text, .article__text p {
   font-size: 16px;
   line-height: 24px;
   color: #21243D;
@@ -302,10 +305,10 @@ body {
     overflow: auto; } }
 .works__item {
   border-bottom: 1px solid #e0e0e0;
-  padding: 0 0 30px 0;
-  margin: 0 0 30px 0; }
+  padding: 0 0 50px 0;
+  margin: 0 0 50px 0; }
   .works__item:last-child {
-    margin-bottom: 0; }
+    margin-bottom: 52px; }
   @media (min-width: 767.98px) {
     .works__item {
       display: flex;
@@ -322,7 +325,7 @@ body {
   overflow: hidden; }
   @media (max-width: 767.98px) {
     .works__image {
-      padding: 0 0 60% 0;
+      padding: 0 0 50% 0;
       margin: 0 0 17px 0; } }
 .works__body {
   flex: 1 1 auto; }
@@ -365,9 +368,18 @@ body {
   color: #8695A4;
   margin: 0 0 0 25px; }
 
+.works__main-title {
+  margin: 0 0 34px 0;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 200%; }
+  @media (max-width: 767.98px) {
+    .works__main-title {
+      margin: 0 0 15px 15px; } }
+
 .footer {
-  margin: 0 0 60px 0;
-  padding: 10px 15px 23px 15px;
+  margin: 0 0 30px 0;
+  padding: 10px 15px 30px 15px;
   text-align: center; }
   .footer__copy {
     font-weight: 400;
@@ -375,57 +387,50 @@ body {
     line-height: 150%;
     margin: 26px 0 0 0; }
 
-.social {
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-  .social__item {
-    font-size: 30px;
-    margin: 0 17px;
-    color: inherit; }
-
-.blog {
-  padding: 0 15px 50px 15px; }
-  @media (max-width: 767.98px) {
-    .blog {
-      padding-bottom: 30px; } }
-  .blog__title {
-    margin: 0 0 50px 0;
-    margin-bottom: 15px;
-    padding-bottom: 15px; }
-  .blog__item {
-    border-bottom: 1px solid #E0E0E0;
-    margin-bottom: 25px;
-    padding-bottom: 25px; }
+.article {
+  max-width: 700px;
+  padding: 0 15px 30px 15px;
+  margin: 0 auto; }
+  .article__title {
+    font-weight: 700;
+    font-size: 34px;
+    line-height: 147.0588235294%;
+    margin: 0 0 30px 0; }
     @media (max-width: 767.98px) {
-      .blog__item {
-        margin-bottom: 25px;
-        padding-bottom: 25px; } }
-  .blog__info {
+      .article__title {
+        font-size: 30px; } }
+  .article__info {
     display: flex;
-    font-weight: 400;
+    margin: 0 0 20px 0; }
+  .article__year {
+    display: flex;
+    height: 25px;
+    padding: 0 10px;
+    font-size: 18px;
+    font-weight: 900;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    background: #FF7C7C;
+    border-radius: 16px; }
+  .article__category {
     font-size: 20px;
-    line-height: 145%;
-    margin: 0 0 10px 0; }
-    .blog__info span {
-      margin: 0 15px; }
+    align-self: center;
+    line-height: 125%;
+    margin: 0 0 0 25px; }
     @media (max-width: 767.98px) {
-      .blog__info {
-        font-size: 16px; } }
-  .blog__title2 {
+      .article__category {
+        font-size: 18px; } }
+  .article__text h2 {
     font-weight: 500;
     font-size: 30px;
-    line-height: 146.6666666667%;
-    color: #21243D;
-    transition: color 0.3s ease 0s; }
-    @media (min-width: 991.98px) {
-      .blog__title2:hover {
-        color: #ff6464; } }
-    @media (max-width: 767.98px) {
-      .blog__title2 {
-        font-size: 26px; } }
-  .blog__category {
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 145%;
-    color: #8695A4; }
+    line-height: 200%; }
+  .article__text h3 {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 250%; }
+  .article__text p {
+    margin: 0 0 30px 0; }
+  .article__text img {
+    max-width: 100%;
+    margin: 0 0 20px 0; }
