--- a/scss/main.scss
+++ b/scss/main.scss
@@ -144,17 +144,21 @@ body {
 }
 
 ._ibg {
-    position: relative;
+    overflow: hidden;
     img {
-        position: absolute;
         width: 100%;
         height: 100%;
         top: 0px;
         left: 0px;
         object-fit: cover;
+        
     }
 }
 
+a.works__image._ibg {
+    margin: 0 0;
+    padding: 0 0 17px 0;
+}
 
 .hi {
     padding: 40px 0 70px 0;
@@ -384,6 +388,7 @@ body {
 .title-posts {
 }
 .works {
+
     @media (max-width: $md3+px) {
         padding: 10px 15px 23px 15px;
         display: flex;
@@ -391,10 +396,10 @@ body {
     }
     &__item {
         border-bottom: 1px solid #e0e0e0;
-        padding: 0 0 30px 0;
-        margin: 0 0 30px 0;
+        padding: 0 0 50px 0;
+        margin: 0 0 50px 0;
         &:last-child {
-            margin-bottom: 0;
+            margin-bottom: 52px;
         }
         @media (min-width: $md3+px) {
             display: flex;
@@ -413,7 +418,7 @@ body {
         display: block;
         overflow: hidden;
         @media (max-width: $md3+px) {
-            padding: 0 0 60% 0;
+            padding: 0 0 50% 0;
             margin: 0 0 17px 0;
         }
     }
@@ -470,15 +475,21 @@ body {
         margin: 0 0 0 25px;
     }
 }
-.year {
-}
-.category {
+
+.works__main-title {
+    margin:  0 0 34px 0;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 60 / 30 * 100%;
+    @media (max-width: $md3+px) {
+        margin: 0 0 15px 15px;
+    }
 }
 
 
 .footer {
-    margin: 0 0 60px 0;
-    padding: 10px 15px 23px 15px;
+    margin: 0 0 30px 0;
+    padding: 10px 15px 30px 15px;
     text-align: center;
 
     &__copy {
@@ -489,80 +500,69 @@ body {
     }
 }
 
-.social {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    &__item {
-        font-size: 30px;
-        margin: 0 17px;
-        color: inherit;
-    }
-}
 
-
-.blog {
-    padding: 0 15px 50px 15px;
-    @media (max-width: $md3+px) {
-        padding-bottom: 30px;
-    }
+.article {
+    max-width: 700px;
+    padding: 0 15px 30px 15px;
+    margin: 0 auto;
     &__title {
-        margin: 0 0 50px 0;
-        margin-bottom: 15px;
-        padding-bottom: 15px;
-    }
-
-    &__items {
-    }
-
-    &__item {
-        border-bottom: 1px solid #E0E0E0;
-        margin-bottom: 25px;
-        padding-bottom: 25px;
+        font-weight: 700;
+        font-size: 34px;
+        line-height: 50 / 34 * 100%;
+        margin: 0 0 30px 0;
         @media (max-width: $md3+px) {
-            margin-bottom: 25px;
-            padding-bottom: 25px;
+            font-size: 30px;
         }
     }
 
     &__info {
         display: flex;
-        font-weight: 400;
-        font-size: 20px;
-        line-height: 29 / 20 * 100%;
-        margin: 0 0 10px 0;
-        span {
-            margin: 0 15px;
-        }
-        @media (max-width: $md3+px) {
-            font-size: 16px;
-        }
+        margin: 0 0 20px 0;
     }
-    &__title2 {
-        font-weight: 500;
-        font-size: 30px;
-        line-height: 44 / 30 * 100%;
-        color: #21243D;
-        transition: color 0.3s ease 0s;
-        @media (min-width: $md2+px) {
-            &:hover {
-                color: #ff6464;
-            }
-        }
-        @media (max-width: $md3+px) {
-            font-size: 26px;
-        }
+
+    &__year {
+        display: flex;
+        height: 25px;
+        padding: 0 10px;
+        font-size: 18px;
+        font-weight: 900;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        background: #FF7C7C;
+        border-radius: 16px;
     }
 
     &__category {
-        font-weight: 400;
         font-size: 20px;
-        line-height: 29 / 20 * 100%;
-        color: #8695A4;
+        align-self: center;
+        line-height: 25 / 20 *100%;
+        margin: 0 0 0 25px;
+        @media (max-width: $md3+px) {
+            font-size: 18px;
+        }
     }
 
     &__text {
+        h2 {
+        font-weight: 500;
+        font-size: 30px;
+        line-height: 60 / 30 * 100%;
+        }
+        h3 {
+            font-weight: 500;
+            font-size: 24px;
+            line-height: 60 / 24 * 100%;
+        }
+        p {
+            margin: 0 0 30px 0;
+            @extend .text
+            
+        }
+        img {
+            max-width: 100%;
+            margin: 0 0 20px 0;
+        }
     }
 }
-
 
