--- a/scss/main.scss
+++ b/scss/main.scss
@@ -385,8 +385,7 @@ a.works__image._ibg {
     }
 }
 
-.title-posts {
-}
+
 .works {
 
     @media (max-width: $md3+px) {
@@ -565,4 +564,91 @@ a.works__image._ibg {
         }
     }
 }
+
+
+.blog {
+    padding: 0 15px 50px 15px;
+    margin-bottom: 50px;
+    @media (max-width: $md3+px) {
+        margin: 0 0 60px 0;
+        padding: 0 15px 60px 15px;
+    }
+    &__main-title {
+        margin: 0 0 50px 0;
+        @media (max-width: $md3+px) {
+            font-size: 30px;
+            margin: 0 0 20px 0;
+        }
+    }
+
+    &__items {
+
+    }
+
+    &__item {
+        border-bottom: 1px solid #E0E0E0;
+        padding: 0 0 30px 0;
+        margin: 0 0 40px 0;
+        @media (max-width: $md3+px) {
+            margin: 0 0 20px 0;
+            padding: 0 0 20px 0;
+        }
+    }
+
+    &__title {
+        font-weight: 500;
+        font-size: 30px;
+        line-height: 44px;
+        color: inherit;
+        transition: color 0.3s ease 0s;
+        @media (min-width: $md2+px) {
+            &:hover {
+                color: #ff6464;
+            }
+        }
+        @media (max-width: $md3+px) {
+            font-size: 26px;
+            line-height: 38 / 26 * 100%;
+        }
+    }
+
+    &__info {
+        display: flex;
+        margin: 15px 0 0 0;
+        align-items: center;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 29 / 20 * 100%;
+        span {
+            margin: 0 25px;
+        }
+        @media (max-width: $md3+px) {
+            margin: 5px 0 0 0; 
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 24 / 16 * 100%;
+        }
+    }
+
+    &__category {
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 29 / 20 * 100%;
+        color: #8695A4;
+        @media (max-width: $md3+px) {
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 24 / 16 * 100%;
+        }
+    }
+
+    &__text {
+        margin: 5px 0 0px 0;
+        @media (max-width: $md3+px) {
+            margin: 20px 0 0px 0; 
+        }
+    }
+}
+
+
 
