--- a/scss/main.scss
+++ b/scss/main.scss
@@ -129,7 +129,7 @@ body {
 }
 
 ._container {
-    max-width: $maxWidthContainer + px;
+    max-width: $maxWidthContainer;
     margin: 0 auto;
 }
 
