--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ body {
       padding: 20px 0 0 0; } }
 
 ._container {
-  max-width: 856pxpx;
+  max-width: 856px;
   margin: 0 auto; }
 
 .title-posts {
