--- a/css/main.css
+++ b/css/main.css
@@ -97,10 +97,6 @@ body {
     .page {
       padding: 20px 0 0 0; } }
 
-._container {
-  max-width: 856px;
-  margin: 0 auto; }
-
 .title-posts {
   font-size: 22px; }
   @media (max-width: 767.98px) {
@@ -122,6 +118,8 @@ a.works__image._ibg {
   padding: 0 0 17px 0; }
 
 .hi {
+  max-width: 856px;
+  margin: 0 auto;
   padding: 40px 0 70px 0; }
   @media (max-width: 868px) {
     .hi {
@@ -217,6 +215,8 @@ a.works__image._ibg {
       width: 100%; } }
 
 .recent-posts {
+  max-width: 856px;
+  margin: 0 auto;
   background: #EDF7FA;
   padding: 25px 15px 13px 15px; }
   @media (max-width: 767.98px) {
@@ -245,6 +245,8 @@ a.works__image._ibg {
     margin: 0 0 17px 0; }
 
 .recent-post {
+  max-width: 856px;
+  margin: 0 auto;
   height: 100%;
   background-color: #fff;
   border-radius: 4px;
@@ -285,7 +287,8 @@ a.works__image._ibg {
     line-height: 150%; }
 
 .featured-works {
-  margin: 30px 0 80px 0; }
+  margin: 30px auto 80px auto;
+  max-width: 856px; }
   @media (max-width: 767.98px) {
     .featured-works {
       margin: 10px 0 0 0; } }
@@ -298,75 +301,78 @@ a.works__image._ibg {
       .featured-works__title {
         margin: 0px 0 0 0; } }
 
-@media (max-width: 767.98px) {
-  .works {
-    padding: 10px 15px 23px 15px;
-    display: flex;
-    overflow: auto; } }
-.works__item {
-  border-bottom: 1px solid #e0e0e0;
-  padding: 0 0 50px 0;
-  margin: 0 0 50px 0; }
-  .works__item:last-child {
-    margin-bottom: 52px; }
-  @media (min-width: 767.98px) {
-    .works__item {
+.works {
+  max-width: 856px;
+  margin: 0 auto; }
+  @media (max-width: 767.98px) {
+    .works {
+      padding: 10px 15px 23px 15px;
       display: flex;
-      align-items: flex-start; } }
-  @media (max-width: 767.98px) {
-    .works__item {
-      flex: 0 0 90%;
-      margin: 0 15px 50px 0; } }
-.works__image {
-  border-radius: 6px;
-  flex: 0 0 246px;
-  min-height: 180px;
-  display: block;
-  overflow: hidden; }
-  @media (max-width: 767.98px) {
-    .works__image {
-      padding: 0 0 50% 0;
-      margin: 0 0 17px 0; } }
-.works__body {
-  flex: 1 1 auto; }
-  @media (min-width: 767.98px) {
-    .works__body {
-      margin: 0 0 0 20px; } }
-.works__title {
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 146.6666666667%;
-  margin: 0 0 15px 0;
-  color: inherit;
-  transition: color 0.3s ease 0s; }
-  @media (max-width: 767.98px) {
-    .works__title {
-      font-size: 24px; } }
-  @media (min-width: 991.98px) {
-    .works__title:hover {
-      color: #ff6464; } }
-.works__info {
-  display: flex;
-  align-items: center;
-  margin: 0 0 15px 0; }
-.works__year {
-  font-weight: 900;
-  font-size: 18px;
-  color: #FFFFFF;
-  background: #142850;
-  border-radius: 16px;
-  width: 62px;
-  height: 25px;
-  text-align: center;
-  padding: 0 10px;
-  align-items: center;
-  display: inline-flex; }
-.works__category {
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 145%;
-  color: #8695A4;
-  margin: 0 0 0 25px; }
+      overflow: auto; } }
+  .works__item {
+    border-bottom: 1px solid #e0e0e0;
+    padding: 0 0 50px 0;
+    margin: 0 0 50px 0; }
+    .works__item:last-child {
+      margin-bottom: 52px; }
+    @media (min-width: 767.98px) {
+      .works__item {
+        display: flex;
+        align-items: flex-start; } }
+    @media (max-width: 767.98px) {
+      .works__item {
+        flex: 0 0 90%;
+        margin: 0 15px 50px 0; } }
+  .works__image {
+    border-radius: 6px;
+    flex: 0 0 246px;
+    min-height: 180px;
+    display: block;
+    overflow: hidden; }
+    @media (max-width: 767.98px) {
+      .works__image {
+        padding: 0 0 50% 0;
+        margin: 0 0 17px 0; } }
+  .works__body {
+    flex: 1 1 auto; }
+    @media (min-width: 767.98px) {
+      .works__body {
+        margin: 0 0 0 20px; } }
+  .works__title {
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 146.6666666667%;
+    margin: 0 0 15px 0;
+    color: inherit;
+    transition: color 0.3s ease 0s; }
+    @media (max-width: 767.98px) {
+      .works__title {
+        font-size: 24px; } }
+    @media (min-width: 991.98px) {
+      .works__title:hover {
+        color: #ff6464; } }
+  .works__info {
+    display: flex;
+    align-items: center;
+    margin: 0 0 15px 0; }
+  .works__year {
+    font-weight: 900;
+    font-size: 18px;
+    color: #FFFFFF;
+    background: #142850;
+    border-radius: 16px;
+    width: 62px;
+    height: 25px;
+    text-align: center;
+    padding: 0 10px;
+    align-items: center;
+    display: inline-flex; }
+  .works__category {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 145%;
+    color: #8695A4;
+    margin: 0 0 0 25px; }
 
 .works__main-title {
   margin: 0 0 34px 0;
@@ -436,8 +442,9 @@ a.works__image._ibg {
     margin: 0 0 20px 0; }
 
 .blog {
-  padding: 0 15px 50px 15px;
-  margin-bottom: 50px; }
+  max-width: 856px;
+  margin: 0 auto 50px auto;
+  padding: 0 15px 50px 15px; }
   @media (max-width: 767.98px) {
     .blog {
       margin: 0 0 60px 0;
