--- a/scss/main.scss
+++ b/scss/main.scss
@@ -128,10 +128,7 @@ body {
     }
 }
 
-._container {
-    max-width: $maxWidthContainer;
-    margin: 0 auto;
-}
+
 
 .title-posts {
     font-size: 22px;
@@ -159,6 +156,8 @@ a.works__image._ibg {
 }
 
 .hi {
+    max-width: $maxWidthContainer;
+    margin: 0 auto;
     padding: 40px 0 70px 0;
     @media (max-width: $md1) {
         padding: 0 0 70px 0;
@@ -271,6 +270,8 @@ a.works__image._ibg {
 
 
 .recent-posts {
+    max-width: $maxWidthContainer;
+    margin: 0 auto;
     background: #EDF7FA;
     padding: 25px 15px 13px 15px;
     @media (max-width: $md3) {
@@ -310,6 +311,8 @@ a.works__image._ibg {
 }
 
 .recent-post {
+    max-width: $maxWidthContainer;
+    margin: 0 auto;
     height: 100%;
     background-color: #fff;
     border-radius: 4px;
@@ -360,7 +363,8 @@ a.works__image._ibg {
 
 
 .featured-works {
-    margin: 30px 0 80px 0;
+    margin: 30px auto 80px auto;
+    max-width: $maxWidthContainer;
     @media (max-width: $md3) {
         margin: 10px 0 0 0;
     }
@@ -378,7 +382,8 @@ a.works__image._ibg {
 
 
 .works {
-
+    max-width: $maxWidthContainer;
+    margin: 0 auto;
     @media (max-width: $md3) {
         padding: 10px 15px 23px 15px;
         display: flex;
@@ -558,8 +563,9 @@ a.works__image._ibg {
 
 
 .blog {
+    max-width: $maxWidthContainer;
+    margin: 0 auto 50px auto;
     padding: 0 15px 50px 15px;
-    margin-bottom: 50px;
     @media (max-width: $md3) {
         margin: 0 0 60px 0;
         padding: 0 15px 60px 15px;
